Preventing download dialog from expanding outside viewport on mobile
By reducing the width - it was wider than it needed to be anyway

--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -95,7 +95,7 @@ label.radioLabel {
   right: 0;
   border: 2px solid $border-color;
   border-radius: 10px;
-  width: 20.0rem; 
+  width: 15.0rem;
 }
 
 .popup-box::before {
